--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 
 body
 	height: 100px
-	font-family: 'OpenSans-Semibold', sans-serif;
+	font-family: 'OpenSans-Regular', sans-serif;
 .container
 	max-width: 1170px
 	margin: 0 auto
@@ -45,11 +45,12 @@ body
 	padding-top: 120px
 
 	h4
+		font-family: 'OpenSans-Semibold', sans-serif;
 		color: #ffffff
 		font-size: 63px
 		margin-bottom: 40px
 	p
-		padding-left: 533px
+		padding-left: 700px
 		color: #ffffff
 		font-size: 23px
 		height: 92px
@@ -67,15 +68,31 @@ body
 .section
 	text-align: center
 	height: 800px
-	padding-top: 100px
+	padding-top: 107px
 	padding-bottom: 100px
 	display: inline-block
+.item
+	text-align: center
 .box_item
-	display: inline-block	
+	display: inline-block
+	text-align: center
+	padding-left: 135px	
+	h4
+		font-size: 22px
+		margin-bottom: -10px
+	h3
+		font-size: 14px
+	p
+		font-size: 14px
+		width: 304px
+		padding-top: 35px
+
 .text_section
 	h4
 		font-size: 42px
 		color: #4e525d
+
+
 .footer
 	background-repeat: no-repeat
 	background-size: cover
