--- a/app/css/main.css
+++ b/app/css/main.css
@@ -62,10 +62,11 @@ body {
   color: #ffffff;
   font-size: 63px;
   margin-bottom: 40px;
+  padding-top: 100px;
 }
 
 .carousel_box .owl_carousel {
-  height: 800px;
+  height: 570px;
   position: relative;
 }
 
@@ -76,36 +77,39 @@ body {
   height: 92px;
   width: 367px;
   text-align: center;
-  margin-bottom: 58px;
+  margin-bottom: 40px;
 }
 
-.carousel_box .owl_carousel .owl-prev,
-.carousel_box .owl_carousel .owl-next {
-  position: absolute;
-  top: 50%;
+.carousel_box .owl_carousel .centre_botton {
+  margin-bottom: 50px;
 }
 
-.carousel_box .owl_carousel .owl-next {
-  right: 0;
-  background-color: #FFF;
-}
-
-.carousel_box .owl_carousel .owl-prev {
-  left: 0;
-}
-
-.carousel_box .centre_botton {
-  text-align: center;
-  color: #fff;
-}
-
-.carousel_box a {
+.carousel_box .owl_carousel .centre_botton a {
   color: #fff;
   font-size: 26px;
   border: 2px solid #fff;
   padding: 12px 43px;
   border-radius: 5px;
   text-decoration: none;
+}
+
+.carousel_box .owl_carousel .owl-prev,
+.carousel_box .owl_carousel .owl-next {
+  margin-right: 27px;
+  margin-left: 27px;
+  position: absolute;
+  background-color: #FFF;
+  border: 14px solid #fff;
+  top: 50%;
+  border-radius: 100%;
+}
+
+.carousel_box .owl_carousel .owl-next {
+  right: 0;
+}
+
+.carousel_box .owl_carousel .owl-prev {
+  left: 0;
 }
 
 .section {
@@ -123,7 +127,7 @@ body {
 .box_item {
   display: inline-block;
   text-align: center;
-  padding-left: 135px;
+  padding-left: 110px;
 }
 
 .box_item h4 {
@@ -240,4 +244,60 @@ body {
   padding: 13px 55px;
   border-radius: 3px;
   text-decoration: none;
+}
+
+.centre_plans {
+  height: 740px;
+  background-color: #f1f1f1;
+}
+
+.centre_plans .menu_plans {
+  float: left;
+  display: inline-block;
+  text-align: center;
+  padding-left: 135px;
+}
+
+.centre_plans .menu_plans ul {
+  margin-right: 10px;
+  margin-right-margin-left: 0;
+  margin-right-margin-left-padding-left: 0;
+}
+
+.centre_plans .menu_plans ul h4 {
+  background-color: #485460;
+  color: #fff;
+  width: 372px;
+  font-size: 26px;
+  font-family: 'OpenSans-Semibold', sans-serif;
+  padding-top: 26px;
+  padding-bottom: 30px;
+}
+
+.centre_plans .menu_plans ul li {
+  list-style-type: none;
+  background-color: #fff;
+  margin-top: 1px;
+  padding-top: 10px;
+}
+
+.centre_plans .menu_plans ul li a {
+  background-color: #f8f9fb;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #8c9299;
+  text-decoration: none;
+}
+
+.centre_plans .btn_plans {
+  background-color: #f8f9fb;
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.centre_plans .btn_plans a {
+  background-color: #485460;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
