--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -48,8 +48,9 @@ body
 				color: #ffffff
 				font-size: 63px
 				margin-bottom: 40px
+				padding-top: 100px
 	.owl_carousel
-		height: 800px 
+		height: 570px 
 		position: relative
 		.class_1
 			padding-left: 700px
@@ -58,29 +59,30 @@ body
 			height: 92px
 			width: 367px  
 			text-align: center    
-			margin-bottom: 58px
+			margin-bottom: 40px
+		.centre_botton
+			margin-bottom: 50px
+			a
+				color: #fff
+				font-size: 26px
+				border: 2px solid #fff
+				padding: 12px 43px
+				border-radius: 5px
+				text-decoration: none
 		.owl-prev, 
 		.owl-next
-				// margin-right: 27px
-				// margin-left: 27px
-				position: absolute
-				top: 50%
-		.owl-next
-				right: 0
+				margin-right: 27px
+				margin-left: 27px
+				position: absolute  
 				background-color: #FFF
-
+				border: 14px solid #fff
+				top: 50%
+				border-radius: 100%
+		.owl-next   
+			right: 0			
 		.owl-prev 
 			left: 0
-	.centre_botton	
-		text-align: center
-		color: #fff
-	a
-		color: #fff
-		font-size: 26px
-		border: 2px solid #fff
-		padding: 12px 43px
-		border-radius: 5px
-		text-decoration: none
+
 .section
 	text-align: center
 	height: 800px
@@ -92,7 +94,7 @@ body
 .box_item
 	display: inline-block
 	text-align: center
-	padding-left: 135px	
+	padding-left: 110px	
 	h4
 		font-size: 22px
 		margin-bottom: -10px
@@ -107,7 +109,6 @@ body
 	h4
 		font-size: 42px
 		color: #4e525d
-
 
 .footer
 	background-repeat: no-repeat
@@ -179,3 +180,44 @@ body
 		padding: 13px 55px
 		border-radius: 3px
 		text-decoration: none
+.centre_plans
+	height: 740px
+	background-color: #f1f1f1
+	.menu_plans
+		float: left
+		display: inline-block
+		text-align: center
+		padding-left: 135px
+		ul 
+			margin-right: 10px
+			 margin-left: 0 
+   			 padding-left: 0
+			
+			h4
+				background-color: #485460
+				color: #fff
+				width: 372px
+				font-size: 26px
+				font-family: 'OpenSans-Semibold', sans-serif;
+				padding-top: 26px
+				padding-bottom: 30px	
+			li 
+				list-style-type: none
+				background-color: #fff
+				margin-top: 1px
+				padding-top: 10px	
+				a
+					background-color: #f8f9fb
+					margin-top: 10px
+					font-size: 14px
+					color: #8c9299	
+					text-decoration: none       
+	.btn_plans
+		background-color: #f8f9fb
+		display: inline-block
+		text-decoration: none
+		color: #fff   
+		a
+			background-color: #485460
+			padding-top: 10px
+			padding-bottom: 10px
