Made some changes

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,25 +5,65 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1920px)
 	/**/
+	// .content       
+	// 	.centre_plans
+	// 		height: 1874px		
+	// 		display: inline-block
+ // 	.footer
+	// 	.left_footer
+	// 		float: left
+	// 		padding-left: 3%
+	// 	.right_footer
+	// 		float: right
+	// 		padding-right: 2%
+
 
 @media only screen and (max-width : 1200px)
 	/**/
+	.footer
+		.left_footer
+			float: left
+			padding-left: 3%
+		.right_footer
+			float: right
+			padding-right: 2%
 
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
-	
+.carousel_box
+	.item_1
+			.name
+				h4
+					font-size: 14px	 
+				p 
+					font-size: 10px  
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
-
+	.content 
+		.centre_plans
+			height: 1874px		
+			
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
+	.content 
+		.centre_plans
+			height: 1874px	
+			display: inline-block
+	.carousel_box
+		.item_1
+			.name
+				h4
+					font-size: 14px	 
+				p 
+					font-size: 10px  
 
+			
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
@@ -40,11 +80,26 @@
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px)
 	/**/
+	.content 
+		.centre_plans
+			height: 1874px		
+			display: inline-block
 
+	.carousel_box
+		.item_1
+			.name
+				h4
+					font-size: 14px	
+				p 
+					font-size: 10px  
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
 	/**/
+	.content 
+		.centre_plans
+			height: 1874px		
+			display: inline-block
 
 
 /* Medium Devices, Desktops */
