--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,18 +5,6 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1920px)
 	/**/
-	// .content       
-	// 	.centre_plans
-	// 		height: 1874px		
-	// 		display: inline-block
- // 	.footer
-	// 	.left_footer
-	// 		float: left
-	// 		padding-left: 3%
-	// 	.right_footer
-	// 		float: right
-	// 		padding-right: 2%
-
 
 @media only screen and (max-width : 1200px)
 	/**/
@@ -32,75 +20,153 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
-.carousel_box
-	.item_1
-			.name
-				h4
-					font-size: 14px	 
-				p 
-					font-size: 10px  
-
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
-	.content 
-		.centre_plans
-			height: 1874px		
-			
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
+	.centre_plans
+		.menu_plans
+			padding-top: 22px
+
+	.footer
+		height: 1100px
+	.center_footer
+		h4
+			padding-top: 0px
+			padding-bottom: 30px
+
 	.content 
 		.centre_plans
-			height: 1874px	
+			height: 1570px	
 			display: inline-block
 	.carousel_box
 		.item_1
 			.name
 				h4
-					font-size: 14px	 
+					font-size: 18px	 
 				p 
-					font-size: 10px  
+					font-size: 15px  
+	.contact_form
+		input 
+			width: 346px
 
+ 
 			
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
+@media only screen and (max-width : 375px)
 	/**/
+	.menu 
+		float: none
+		padding-bottom: 10px
+	.menu li
+		padding-left: 19px 
+		padding-top: 17px 
 
+	.selection_1
+		.text_selection
+			padding-top: 2px
+	.carousel_box
+		.owl_carousel
+			.class_1
+				font-size: 15px
+			.owl-prev,
+			.owl-next
+				top: 28%
+				display: none
+    .centre_plans
+		.menu_plans
+			padding-top: 22px
+
+	.footer
+		height: 1100px
+	.center_footer
+		h4
+			padding-top: 0px
+			padding-bottom: 30px
+
+	.content 
+		.centre_plans
+			height: 1570px	
+			display: inline-block
+			ul 
+				h4
+					width: 291px
+	.carousel_box
+		.item_1
+			.name
+				h4
+					font-size: 18px	 
+				p 
+					font-size: 11px  
+	.contact_form
+		input 
+			width: 255px
 
 /*==========  Mobile First  ==========*/
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px)
 	/**/
+	.menu 
+		li
+			padding-left: 6px 
+			padding-top: 3px
+	.logo
+		a 
+			padding-left: 95px
+			padding-bottom: 20px
+	.selection_1
+		.text_selection     
+			padding-top: 2px
+	.carousel_box
+		.owl_carousel
+			.class_1
+				font-size: 15px
+			.owl-prev,
+			.owl-next
+				top: 28%
+				display: none        
+    .centre_plans
+		.menu_plans
+			padding-top: 22px
+
+	.footer
+		height: 1100px
+	.center_footer
+		h4
+			padding-top: 0px
+			padding-bottom: 30px
+
+	.content 
+		.centre_plans
+			height: 1570px	
+			display: inline-block
+			ul 
+				h4
+					width: 232px
+	.carousel_box
+		.item_1
+			.name
+				h4
+					font-size: 18px	 
+				p 
+					font-size: 11px  
+	.contact_form
+		input 
+			width: 228px
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px)
 	/**/
-	.content 
-		.centre_plans
-			height: 1874px		
-			display: inline-block
-
-	.carousel_box
-		.item_1
-			.name
-				h4
-					font-size: 14px	
-				p 
-					font-size: 10px  
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
 	/**/
-	.content 
-		.centre_plans
-			height: 1874px		
-			display: inline-block
-
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px)
@@ -109,9 +175,10 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
-
+    /**/
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1920px)
 	/**/
 
-
+                        
+                 
