--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -103,7 +103,7 @@ body
 		.box_item
 			display: inline-block
 			text-align: center
-			padding-left: 50px	
+		
 			h4
 				font-size: 22px
 				margin-bottom: -10px
@@ -230,4 +230,14 @@ body
 			background-color: #788492
 			padding: 11px 66px
 			border-radius: 5px  
-  	
+  
+
+    
+   
+
+
+
+
+
+
+@import "media"
