--- a/app/css/main.css
+++ b/app/css/main.css
@@ -338,6 +338,97 @@ body {
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
   /**/
+  .menu {
+    float: none;
+    padding-bottom: 10px;
+  }
+  .menu li {
+    padding-left: 19px;
+    padding-top: 17px;
+  }
+  .selection_1 .text_selection {
+    padding-top: 2px;
+  }
+  .carousel_box .owl_carousel .class_1 {
+    font-size: 15px;
+  }
+  .carousel_box .owl_carousel .owl-prev,
+  .carousel_box .owl_carousel .owl-next {
+    top: 28%;
+    display: none;
+  }
+  .carousel_box .menu_plans {
+    padding-top: 22px;
+  }
+  .footer {
+    height: 1100px;
+  }
+  text-align: center;
+  h4 {
+    color: #fff;
+    font-size: 42px;
+    padding-top: 60px;
+    margin-bottom: 100px;
+  }
+}
+
+.left_footer {
+  float: left;
+  padding-left: 9%;
+}
+
+.left_footer h4 {
+  margin-bottom: 15px;
+  color: #fff;
+  font-size: 24px;
+}
+
+.left_footer h3 {
+  color: #909090;
+  font-size: 14px;
+}
+
+.left_footer h3 p {
+  padding-left: 0px;
+  margin-top: 1px;
+  display: flex;
+}
+
+.social img {
+  padding-top: 42px;
+  margin-right: 15px;
+}
+
+.social p {
+  padding-left: 7px;
+  color: #bface2;
+  font-size: 14px;
+}
+
+.contact_form {
+  display: inline-block;
+  text-align: left;
+}
+
+.contact_form .content .centre_plans {
+  height: 1570px;
+  display: inline-block;
+}
+
+.contact_form .content .centre_plans ul h4 {
+  width: 291px;
+}
+
+.contact_form .carousel_box .item_1 .name h4 {
+  font-size: 18px;
+}
+
+.contact_form .carousel_box .item_1 .name p {
+  font-size: 11px;
+}
+
+.contact_form .contact_form input {
+  width: 255px;
 }
 
 /* Extra Small Devices, Phones */
