--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -23,14 +23,16 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
-
+	
+		
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
 	.centre_plans
+		height: 
 		.menu_plans
 			padding-top: 22px
-
+    
 	.footer
 		height: 1100px
 	.center_footer
